Rename label helper

--- a/app/views/data_explorer/_filter_chooser.html.erb
+++ b/app/views/data_explorer/_filter_chooser.html.erb
@@ -14,7 +14,7 @@
   <div class="card-body p-2">
     <div class="d-flex">
       <h3 class="card-title flex-grow-1 mt-1">
-        <%= prop_or_dim_label(dimension_name) %>
+        <%= schema_field_label(dimension_name) %>
       </h3>
 
       <select
