--- a/app/views/data_explorer/_filter_chooser_token.html.erb
+++ b/app/views/data_explorer/_filter_chooser_token.html.erb
@@ -10,7 +10,7 @@
       <% Lists.list_for(dim_key, @current_user_podcast_accounts).each do |item| %>
         <option
           <%= html_attributes(value: item[item.keys[0]]) %>
-          <%= select_eq filter&.values&.include?(item[item.keys[0]].to_s) %>>
+          <%= select_eq filter&.value?(item[item.keys[0]].to_s) %>>
 
           <%= item[item.keys[1]] %>
         </option>
