Move sort controller to wrapper

--- a/app/views/data_explorer/index.html.erb
+++ b/app/views/data_explorer/index.html.erb
@@ -5,7 +5,7 @@
       method: :get,
       id: "data-explorer",
       data: {
-        controller: "data-explorer--composition-url data-explorer--results-table-highlight data-explorer--chrome",
+        controller: "data-explorer--composition-url data-explorer--results-table-highlight data-explorer--results-table-sort data-explorer--chrome",
         action: "data-explorer--composition-url#goto keydown.meta+enter@document->data-explorer--composition-url#goto keydown.esc@document->data-explorer--chrome#toggle",
         "data-explorer--chrome-target": "root"
       } do |form| %>
