--- a/app/views/data_explorer/dimensional/_results.html.erb
+++ b/app/views/data_explorer/dimensional/_results.html.erb
@@ -81,8 +81,7 @@
 <table
   class="table dx-results"
   data-data-explorer--results-table-highlight-target="table"
-  data-data-explorer--results-table-sort-target="table"
-  data-controller="data-explorer--results-table-sort">
+  data-data-explorer--results-table-sort-target="table">
 
   <colgroup>
     <%# Group 1 member labels %>
