--- a/app/views/data_explorer/time_series/results/table/_10_interval_headers.html.erb
+++ b/app/views/data_explorer/time_series/results/table/_10_interval_headers.html.erb
@@ -1,5 +1,10 @@
 <tr>
   <%= tag.td if @tbl_show_group_1_headers %>
+
+  <% @meta&.each do |meta_field_name| %>
+    <td><%= schema_field_label(meta_field_name) %></td>
+  <% end %>
+
   <%= tag.td if @tbl_show_group_2_headers %>
 
   <%# A cell for each granularity period, spanning all metrics and comparisons %>
