--- a/app/views/data_explorer/time_series/results/table/_30_comparison_headers.html.erb
+++ b/app/views/data_explorer/time_series/results/table/_30_comparison_headers.html.erb
@@ -1,5 +1,10 @@
 <tr>
   <%= tag.td if @tbl_show_group_1_headers %>
+
+  <% @meta&.each do |meta_field_name| %>
+    <td></td>
+  <% end %>
+
   <%= tag.td if @tbl_show_group_2_headers %>
 
   <% @composition.results.unique_interval_descriptors.each do |interval_descriptor| %>
