--- a/app/views/data_explorer/dimensional/_sort_chooser.html.erb
+++ b/app/views/data_explorer/dimensional/_sort_chooser.html.erb
@@ -16,16 +16,28 @@
             <option value="no-sort">Add a Column…</option>
           <% end %>
 
-          <option value="[data-dx-group-1-member-sort-values]">Default sorting for <%= schema_field_label @composition.groups[0].dimension %> group</option>
+          <option value="[data-dx-group-1-default-sort-index]">Default sorting for <%= schema_field_label g1.dimension %> group</option>
 
           <% g1&.meta&.each do |meta_field_name| %>
             <option value="<%= "[data-dx-group-1-meta-#{meta_field_name.to_s.tr("_", "-")}]" %>"><%= schema_field_label meta_field_name %></option>
           <% end %>
 
+          <% if g2 %>
+            <hr>
+            <% @composition.metrics.each do |metric| %>
+              <option
+                value="<%= "[data-dx-metric='#{metric.metric}'][data-dx-agg-point-sum][data-dx-group-1-member-descriptor]" %>">
+
+                <%= metric.metric %> total
+              </option>
+            <% end %>
+            <hr>
+          <% end %>
+
           <%
             display_group_2_member_descriptors = @composition.results.group_2_unique_member_descriptors || []
             display_group_2_member_descriptors << nil
-            display_group_2_member_descriptors = default_group_member_descriptor_sort(@composition, @composition.groups[1], display_group_2_member_descriptors)
+            display_group_2_member_descriptors = default_group_member_descriptor_sort(@composition, g2, display_group_2_member_descriptors)
           %>
 
           <% display_group_2_member_descriptors.each do |group_2_member_descriptor| %>
@@ -33,7 +45,7 @@
               <option
                 value="<%= "[data-dx-metric='#{metric.metric}'][data-dx-group-2-member-descriptor='#{group_2_member_descriptor || "__nil__"}']" %>">
 
-                <%= member_label(@composition, @composition.groups[1], group_2_member_descriptor) %> – <%= metric.metric %>
+                <%= member_label(@composition, g2, group_2_member_descriptor) %> – <%= metric.metric %>
               </option>
             <% end %>
           <% end %>
@@ -47,5 +59,40 @@
         </select>
       </div>
     <% end %>
+  <% end %>
+
+  <% if g2 && @composition.metrics.size == 1 %>
+    <h3>Sort Columns WIP</h3>
+
+    <select
+      data-action="data-explorer--results-table-sort#sort"
+      class="col-sort-by">
+
+      <option value="default">Default sorting for <%= schema_field_label g2.dimension %> group</option>
+
+      <% @composition.metrics.each do |metric| %>
+        <option
+          value="total">
+
+          <%= metric.metric %> total
+        </option>
+      <% end %>
+      <hr>
+
+      <% @composition.metrics.each do |metric| %>
+        <option
+          value="first-row">
+
+          First row by <%= metric.metric %>
+        </option>
+      <% end %>
+    </select>
+    <select
+      data-action="data-explorer--results-table-sort#sort"
+      class="col-sort-direction">
+
+      <option value="asc">Ascending (1, 2, 3…)</option>
+      <option value="desc">Descending (3, 2, 1…)</option>
+    </select>
   <% end %>
 </fieldset>
