--- a/app/views/data_explorer/dimensional/results/table/_40_group_row.html.erb
+++ b/app/views/data_explorer/dimensional/results/table/_40_group_row.html.erb
@@ -49,7 +49,15 @@
         end
       %>
 
-      <td class="totals" title="<%= title %>"><%= text %></td>
+      <td
+        data-dx-group-1-member-descriptor="<%= group_1_member_descriptor || "__nil__" %>"
+        data-dx-metric="<%= metric.metric %>"
+        data-dx-agg-point-sum="<%= sum %>"
+        class="totals"
+        title="<%= title %>">
+
+        <%= text %>
+      </td>
     <% end %>
   <% end %>
 
