--- a/app/views/data_explorer/_filter_chooser_token.html.erb
+++ b/app/views/data_explorer/_filter_chooser_token.html.erb
@@ -1,8 +1,9 @@
 <% if Lists.list_for(dim_key) %>
-  <div class="form-floating">
+  <div class="form-floating input-group">
     <select
       data-action="blur->blank-field#blur"
-      class="form-select token-select <%= "field_with_errors" if filter&.errors&.include?(:values) %>"
+      data-controller="slim-select"
+      class="form-select form-control-blank token-select <%= "field_with_errors" if filter&.errors&.include?(:values) %>"
       id="<%= "filter.#{dim_key}.values" %>"
       name="<%= "filter.#{dim_key}.values" %>"
       multiple>
@@ -20,9 +21,17 @@
     <label for="<%= "filter.#{dim_key}.values" %>">Values:</label>
   </div>
 <% else %>
-  <div class="form-floating">
+  <div class="form-floating input-group">
+    <input
+      autocomplete="off"
+      class="value form-control <%= "field_with_errors" if filter&.errors&.include?(:values) %>"
+      type="text"
+      placeholder="Apple, Banana, Cherry"
+      id="<%= "filter.#{dim_key}.values" %>"
+      name="<%= "filter.#{dim_key}.values" %>"
+      value="<%= filter&.values&.join(",") %>">
+
     <label for="<%= "filter.#{dim_key}.values" %>">Values:</label>
-    <input autocomplete="off" class="value <%= "field_with_errors" if filter&.errors&.include?(:values) %>" type="text" placeholder="Apple, Banana, Cherry" id="<%= "filter.#{dim_key}.values" %>" name="<%= "filter.#{dim_key}.values" %>" value="<%= filter&.values&.join(",") %>">
   </div>
 <% end %>
 
