--- a/app/assets/stylesheets/dovetail-app/shared.scss
+++ b/app/assets/stylesheets/dovetail-app/shared.scss
@@ -2,7 +2,7 @@
 @import "fonts";
 
 // bootstrap theme
-@import "bootstrap-variables";
+// @import "bootstrap-variables";
 // @import "bootstrap";
 // @import "slimselect.min";
 // @import "flatpickr.min";
