--- a/app/views/data_explorer/_filter_chooser.html.erb
+++ b/app/views/data_explorer/_filter_chooser.html.erb
@@ -3,11 +3,14 @@
 <%# Look for an existing Filter instance for this dimension – it may not exist %>
 <% filter = @composition.filters&.find { |f| f.dimension == dimension_name.to_sym } %>
 
-<%# = html_attributes(class: "field_with_errors") if filter.try(:invalid?) %>
 <%# = html_attributes(class: "active") if filter.try(:valid?) %>
+<% classes = ["filter-chooser", "card", "mb-3", "bg-white"] %>
+<% classes << "field_with_errors" if filter.try(:invalid?) %>
+<% classes << "filter-added" if filter %>
 <div
-  class="filter-chooser card mb-3 bg-white"
+  class="<%= classes.join(" ") %>"
   data-data-explorer--composition-url-target="filterChooser"
+  data-dimension-name="<%= dimension_name %>"
   data-dimension-key="<%= dim_key %>"
   data-dimension-type="<%= dimension_def["Type"] %>">
 
