--- a/app/assets/stylesheets/data-explorer/data-explorer-temp.css
+++ b/app/assets/stylesheets/data-explorer/data-explorer-temp.css
@@ -12,7 +12,7 @@ form {
   width: 100vw;
   height: 100vh;
   display: grid;
-  grid-template-rows: auto auto;
+  grid-template-rows: 52px auto;
   grid-template-columns: 330px 1fr;
   gap: 0px 0px;
   grid-template-areas:
