--- a/app/assets/stylesheets/data-explorer/filter-chooser.css
+++ b/app/assets/stylesheets/data-explorer/filter-chooser.css
@@ -1,6 +1,8 @@
 .filter-chooser.card {
-  border-top: 4px solid #75bbe1;
+  border-top: 4px solid var(--bs-cyan);
+  border-bottom: 4px solid var(--bs-gray-400);
   display: none;
+  border-radius: 4px;
 
   &.filter-added {
     display: block;
