Fix table reticle

--- a/app/assets/stylesheets/data-explorer/data-explorer-temp.css
+++ b/app/assets/stylesheets/data-explorer/data-explorer-temp.css
@@ -247,22 +247,22 @@ table {
   }
 }
 
-table:has(td:nth-child(1):hover) tr th:nth-child(1),
-table:has(td:nth-child(2):hover) tr th:nth-child(2),
-table:has(td:nth-child(3):hover) tr th:nth-child(3),
-table:has(td:nth-child(4):hover) tr th:nth-child(4),
-table:has(td:nth-child(5):hover) tr th:nth-child(5),
-table:has(td:nth-child(6):hover) tr th:nth-child(6),
-table:has(td:nth-child(7):hover) tr th:nth-child(7),
-table:has(td:nth-child(8):hover) tr th:nth-child(8),
-table:has(td:nth-child(9):hover) tr th:nth-child(9),
-table:has(td:nth-child(10):hover) tr th:nth-child(10),
-table:has(td:nth-child(11):hover) tr th:nth-child(11),
-table:has(td:nth-child(12):hover) tr th:nth-child(12),
-table:has(td:nth-child(13):hover) tr th:nth-child(13),
-table:has(td:nth-child(14):hover) tr th:nth-child(14),
-table:has(td:nth-child(15):hover) tr th:nth-child(15),
-table:has(td:nth-child(16):hover) tr th:nth-child(16),
-table:has(td:nth-child(17):hover) tr th:nth-child(17) {
+table:has(td:nth-child(1):hover) thead tr:last-child th:nth-child(1),
+table:has(td:nth-child(2):hover) thead tr:last-child th:nth-child(2),
+table:has(td:nth-child(3):hover) thead tr:last-child th:nth-child(3),
+table:has(td:nth-child(4):hover) thead tr:last-child th:nth-child(4),
+table:has(td:nth-child(5):hover) thead tr:last-child th:nth-child(5),
+table:has(td:nth-child(6):hover) thead tr:last-child th:nth-child(6),
+table:has(td:nth-child(7):hover) thead tr:last-child th:nth-child(7),
+table:has(td:nth-child(8):hover) thead tr:last-child th:nth-child(8),
+table:has(td:nth-child(9):hover) thead tr:last-child th:nth-child(9),
+table:has(td:nth-child(10):hover) thead tr:last-child th:nth-child(10),
+table:has(td:nth-child(11):hover) thead tr:last-child th:nth-child(11),
+table:has(td:nth-child(12):hover) thead tr:last-child th:nth-child(12),
+table:has(td:nth-child(13):hover) thead tr:last-child th:nth-child(13),
+table:has(td:nth-child(14):hover) thead tr:last-child th:nth-child(14),
+table:has(td:nth-child(15):hover) thead tr:last-child th:nth-child(15),
+table:has(td:nth-child(16):hover) thead tr:last-child th:nth-child(16),
+table:has(td:nth-child(17):hover) thead tr:last-child th:nth-child(17) {
   background-color: red;
 }
