--- a/app/views/data_explorer/_filter_chooser.html.erb
+++ b/app/views/data_explorer/_filter_chooser.html.erb
@@ -20,18 +20,23 @@
         <%= schema_field_label(dimension_name) %>
       </h3>
 
-      <select
-        name="<%= "filter.#{dim_key}" %>"
-        class="
-          filter-operator
-          form-select
-          <%= "field_with_errors" if filter&.errors&.include?(:operator) %>
-        ">
+      <% if dimension_name == "podcast_id" %>
+        <input type="hidden" name="<%= "filter.#{dim_key}" %>" value="include">
+        Include
+      <% else %>
+        <select
+          name="<%= "filter.#{dim_key}" %>"
+          class="
+            filter-operator
+            form-select
+            <%= "field_with_errors" if filter&.errors&.include?(:operator) %>
+          ">
 
-        <option></option>
-        <option value="include" <%= select_eq filter&.operator == :include %>>Include</option>
-        <option value="exclude" <%= select_eq filter&.operator == :exclude %>>Exclude</option>
-      </select>
+          <option></option>
+          <option value="include" <%= select_eq filter&.operator == :include %>>Include</option>
+          <option value="exclude" <%= select_eq filter&.operator == :exclude %>>Exclude</option>
+        </select>
+      <% end %>
     </div>
 
     <div>
